style null values, add support for toggle collapse/expand. need to fix filtering so it doesn't undo the collapse hide

--- a/style.css
+++ b/style.css
@@ -1,19 +1,30 @@
 main{
   margin: auto;
   max-width: 800px;
+  
 }
 div {
   margin-top: 5px;
   padding: 10px;
   border: 1px solid #000000;
   background-color: aliceblue;
-  
 }
 
 div[object]{
   background-color: bisque;
 }
 
+div[null]{
+  background-color: gray;
+}
 .hidden {
   display: none;
+}
+
+header{
+  position: sticky;
+  top:0;
+  z-index: 1;
+  background-color: white;
+  padding: 10px 10px 10px 10px;
 }
